# agent-bug-lab

./: .env.example  .gitignore  AGENTS.md  FINAL_SATURDAY.md  LICENSE  Microsoft_SPEC.md  README.md  SPEC.md  docker-compose.override.yml  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_scopes.py  0003_scope_ownership.py  0004_effort.py  0005_prepare.py  0006_debate.py  0007_static_facts.py  0008_secondary_harness.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: bugs.py  debates.py  (+7 more)
apps/api/app/core/: config.py  ids.py  logging.py  paths.py  security.py
apps/api/app/db/: models.py  session.py
apps/api/app/schemas/: bug.py  harness.py  project.py  review.py  run.py  scope.py  settings.py
apps/api/app/services/: bug_ingest.py  cleaner_service.py  critical_service.py  debate_service.py  dedup_service.py  exporter.py  exporter_service.py  harness_runner.py  prepare_service.py  project_service.py  prompts.py  review_queue.py  run_manager.py  scope_scraper.py  scope_service.py  settings_service.py  static_facts.py
apps/api/app/workers/: arq_settings.py  cleaner_worker.py  critical_worker.py  debate_worker.py  prepare_worker.py  runner.py  searcher_worker.py
apps/api/scripts/: backfill_static_facts.py  migrate_polygon_bugs.py  relabel_polygon_migrations.py  run_polygon_monorepo_chain_search.py  run_polygon_parallel_research.py
apps/api/tests/: conftest.py  test_bug_contract.py  test_bug_ingest.py  test_harness_runner.py  test_scope_service.py
(+48 files in other folders)
